# WorkOS

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/core/: errors.py
backend/data/: checkpoints.db  workos.db
backend/db/: connection.py
backend/db/migrations/: 001_init.sql  002_integration_tables.sql  003_ai_meetings.sql  004_oauth_pending_states.sql  005_vision_settings.sql
backend/routers/: ai.py  ai_chat.py  ai_features.py  ai_sessions.py  oauth.py
backend/schemas/: ai.py
backend/services/: ai_service.py  chat_helpers.py  embedding_service.py  github_client.py  jira_client.py  oauth_service.py  rag_service.py  slack_client.py  transcription_service.py
backend/services/agent/: config.py  github_tools.py  graph.py  meetings_tools.py  prompts.py  slack_tools.py  state.py  tools.py  tools_helpers.py
backend/src/workos/: __init__.py  config.py  main.py
backend/src/workos/agent/: checkpointer.py  factory.py  (+3 more)
backend/tests/: conftest.py  test_api.py  test_thinking.py
backend/tools/: __init__.py  base.py  registry.py
backend/tools/github/: __init__.py  models.py  read.py  sync.py  write.py
backend/tools/jira/: __init__.py  models.py  read.py  sync.py  write.py
backend/tools/meetings/: __init__.py  models.py  process.py  read.py  write.py
backend/tools/oauth/: __init__.py  tools.py
backend/tools/settings/: __init__.py  models.py  tools.py
backend/tools/slack/: __init__.py  models.py  read.py  sync.py  write.py
(+203 files in other folders)
